// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> component handles onCancel 1`] = `
<ForwardRef(Themed.SearchBar)
  containerStyle={
    Object {
      "backgroundColor": "#fff",
    }
  }
  onCancel={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  onChangeText={[Function]}
  placeholder="Search..."
  platform="ios"
  value=""
/>
`;

exports[`<Search /> component handles onChangeText 1`] = `
<ForwardRef(Themed.SearchBar)
  containerStyle={
    Object {
      "backgroundColor": "#fff",
    }
  }
  onChangeText={[Function]}
  placeholder="Search..."
  platform="ios"
/>
`;

exports[`<Search /> component handles onClear 1`] = `
<ForwardRef(Themed.SearchBar)
  containerStyle={
    Object {
      "backgroundColor": "#fff",
    }
  }
  onChangeText={[Function]}
  onClear={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  placeholder="Search..."
  platform="ios"
  value=""
/>
`;

exports[`<Search /> component renders correctly 1`] = `
<ForwardRef(Themed.SearchBar)
  containerStyle={
    Object {
      "backgroundColor": "#fff",
    }
  }
  onChangeText={[Function]}
  placeholder="Search..."
  platform="ios"
  value=""
/>
`;

exports[`<Search /> component returns the correct onChangeText value 1`] = `
<ForwardRef(Themed.SearchBar)
  containerStyle={
    Object {
      "backgroundColor": "#fff",
    }
  }
  onChangeText={[Function]}
  placeholder="Search..."
  platform="ios"
  value="My Query Is"
/>
`;
